--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,15 +1,37 @@
 /* Estilos para la app */
+
+.bodyClass {
+    background-color: cornflowerblue;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /*margin: 10px;*/
+}
+
+.pruebaResorte {
+    background-color: rgb(5, 57, 153);
+}
+
+.itemListContainer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
 .navbar {
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     background-color: rgb(5, 57, 153);
     color: #fff;
     padding: 10px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    vertical-align: baseline;
 }
 
 .logo {
@@ -82,6 +104,7 @@
 
 .fotoJuanito {
     width: 6.5%;
+    vertical-align: baseline;
 }
 
 .iconCarrito {
